# skald

./: .cursorrules  .gitignore
.github/workflows/: README-K8S-UI-BUILD.md  build-and-publish-ui.yml  build-and-push.yml  build-backend-for-k8s.yml  build-embedding-service.yml  build-ui-for-k8s.yml  deploy-to-k8s.yml
.roo/rules/: rules.md
embedding-service/: main.py  pyproject.toml
frontend/: index.html
k8s/: DOCKER-COMPOSE-PARITY.md  FIX-SUMMARY.md  GITHUB-ACTIONS-FIX.md  README.md  UI-API-FIX-SUMMARY.md  UI-API-PATH-FIX.md  UI-REBUILD-GUIDE.md  VALIDATION_REPORT.md  api-deployment.yaml  api-service.yaml  api-url-architecture-design.md  build-ui-for-k8s.sh  configmap.yaml  deploy.sh  docling-deployment.yaml  docling-service.yaml  embedding-service-deployment.yaml  embedding-service-service.yaml  ingress-nginx-values.yaml  ingress.yaml  init-scripts-configmap.yaml  memo-processing-deployment.yaml  namespace.yaml  postgres-deployment.yaml  postgres-service.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml  secret.yaml.example  traefik-deployment.yaml  trigger-build.sh  ui-configmap.yaml  ui-deployment.yaml  ui-nginx-configmap.yaml  ui-service.yaml
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
